--- a/responsive/style.css
+++ b/responsive/style.css
@@ -45,7 +45,7 @@ header nav ul li a
 
 .responsive-banner
 {
-    width: 100%;
+    max-width: max-content;
     height: 500px;
     width: calc(100vh - 100px);
     background-image: url("AF1CUSTOMIZED.jpg");
@@ -98,3 +98,10 @@ header nav ul li a
     text-shadow: 2px 2px 8px #111;
 }
 
+@media all and (max-width: 700px)
+{
+    body
+    {
+        color: white;
+    }
+}
